# flvlc

./: AUTHORS  CMakeLists.txt  Changelog  Makefile  README.md  files.cxx  files.hpp  flvlc.cxx  flvlc.hpp  log.hpp  main_window.cxx  main_window.hpp  multimedia.cxx  multimedia.hpp  playlist.cxx  playlist.hpp  playlist_window.cxx  playlist_window.hpp  preferences_window.cxx  preferences_window.hpp  subtitles_window.cxx  subtitles_window.hpp  syslog.hpp  thunar-sendto-flvlc.desktop  url_window.cxx  url_window.hpp  version.hpp
icons/: AUTHORS  make_icons_header.sh
